# bloattables

./: .gitignore  CHANGELOG.rst  README.rst  pyproject.toml  requirements.txt
bloattables/: main.py
src/bloattables/: __init__.py  __main__.py
src/bloattables/lib/: access.py  fetch.py  generate.py
